# minirl_cli

./: .gitignore  .gitmodules  CMakeLists.txt  command_syntax.txt
src/: CMakeLists.txt  cli_helpers.c  cli_helpers.h  command_definition.c  command_definition.h  command_parser.h  command_parser.l  command_parser.y  main.c  sl.c  sl.h  util.c  util.h
tests/: CMakeLists.txt
tests/cram/: CMakeLists.txt  test_parser.t
